[gd_scene load_steps=24 format=2]

[ext_resource path="res://images/enemies/galactic_cake/base.png" type="Texture" id=1]
[ext_resource path="res://images/enemies/galactic_cake/eye_right_closed.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/galactic_cake/eye_left_closed.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/galactic_cake/eye_right.png" type="Texture" id=4]
[ext_resource path="res://images/enemies/galactic_cake/eye_left.png" type="Texture" id=5]
[ext_resource path="res://scripts/overworld/enemies/bosses/boss_galactic_cake.gd" type="Script" id=6]
[ext_resource path="res://images/particles/pointy_circle.png" type="Texture" id=7]
[ext_resource path="res://images/enemies/galactic_cake/lips.png" type="Texture" id=8]
[ext_resource path="res://images/noise/noize5.png" type="Texture" id=9]
[ext_resource path="res://images/particles/star4.png" type="Texture" id=10]
[ext_resource path="res://images/particles/confetti.png" type="Texture" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D noise_texture;
uniform float value : hint_range(-1.3, 1.3);
uniform vec4 dissolve_color : hint_color;

void fragment(){
	vec4 uv = texture(TEXTURE, UV);
	vec4 noise_uv = texture(noise_texture, UV);
	
	if (noise_uv.b > 1.1*value){
		COLOR.a = 0.0;
	}
	else if(noise_uv.b < 1.1*value && noise_uv.b > 0.9*value){
		COLOR.a = uv.a;
		COLOR.rgb = dissolve_color.rgb;
	}
	else{
		COLOR = uv;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/value = 1.3
shader_param/dissolve_color = Color( 0.992157, 0.623529, 0.917647, 1 )
shader_param/noise_texture = ExtResource( 9 )

[sub_resource type="Animation" id=3]
resource_name = "blink"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("eye_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eye_left_closed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("eye_right:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eye_right_closed:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle0"
tracks/0/type = "value"
tracks/0/path = NodePath("eye_left_closed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eye_right_closed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("eye_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eye_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.122677, 0.416357, 0.881041, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.152941, 0.0196078, 0.243137, 1, 0.439216, 0.0509804, 0.705882, 1, 0.835607, 0.556183, 0.949219, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=6]
resource_name = "bounce"
tracks/0/type = "value"
tracks/0/path = NodePath("body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.629032, 0.629032 ), Vector2( 0.629032, 0.497696 ), Vector2( 0.629032, 0.543779 ), Vector2( 0.629032, 0.43318 ), Vector2( 0.629032, 0.629032 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosive_star_particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deploy_explosive_particles"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("body:material:shader_param/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.3, -0.038 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deploy_death_particles"
} ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.629032, 0.629032 ), Vector2( 0.629032, 0.629032 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:material:shader_param/value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.3, 1.3 ]
}

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.193984 ), 0.0, 0.0, 0, 0, Vector2( 0.848739, 0.668075 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.851163, 1 )
colors = PoolColorArray( 1, 0, 0.168613, 1, 0.0241959, 0.00207934, 0.00207934, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.851163, 1 )
colors = PoolColorArray( 0.50285, 0.0314281, 0.491195, 1, 0.492417, 0.103869, 0.409958, 1, 1, 1, 1, 0 )

[node name="boss_galactic_cake" type="Node2D"]
script = ExtResource( 6 )

[node name="body" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 1.99998, 2 )
scale = Vector2( 0.629032, 0.629032 )
texture = ExtResource( 1 )

[node name="eyes" type="Node2D" parent="body"]
use_parent_material = true

[node name="eye_left" type="Sprite" parent="body/eyes"]
use_parent_material = true
position = Vector2( -178.051, -50.8718 )
texture = ExtResource( 5 )

[node name="eye_left_closed" type="Sprite" parent="body/eyes"]
visible = false
use_parent_material = true
position = Vector2( -178.051, -6.35896 )
texture = ExtResource( 3 )

[node name="eye_right" type="Sprite" parent="body/eyes"]
use_parent_material = true
position = Vector2( 178.051, -50.8718 )
texture = ExtResource( 4 )

[node name="eye_right_closed" type="Sprite" parent="body/eyes"]
visible = false
use_parent_material = true
position = Vector2( 178.051, -6.35897 )
texture = ExtResource( 2 )

[node name="eye_anim" type="AnimationPlayer" parent="body/eyes"]
anims/blink = SubResource( 3 )
anims/idle0 = SubResource( 4 )

[node name="blink_timer" type="Timer" parent="body/eyes"]
one_shot = true
autostart = true

[node name="mouth" type="Sprite" parent="body"]
use_parent_material = true
position = Vector2( 0, 120.821 )
texture = ExtResource( 8 )

[node name="particles" type="CPUParticles2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 1.99998, 1.99999 )
scale = Vector2( 0.999997, 0.999997 )
amount = 2
texture = ExtResource( 7 )
gravity = Vector2( 0, 0 )
angular_velocity = 45.0
angular_velocity_random = 0.06
scale_amount = 4.0
color_ramp = SubResource( 5 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle0"
anims/bounce = SubResource( 6 )
anims/death = SubResource( 7 )
anims/idle0 = SubResource( 8 )

[node name="explosive_death_particles" type="CPUParticles2D" parent="."]
material = SubResource( 9 )
position = Vector2( 1.99998, -112 )
emitting = false
amount = 200
lifetime = 5.0
one_shot = true
explosiveness = 0.3
randomness = 0.23
texture = ExtResource( 11 )
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 150 )
initial_velocity = 296.78
angular_velocity = 557.43
angular_velocity_random = 0.27
linear_accel = 100.0
linear_accel_random = 1.0
angle = -77.4
scale_amount = 2.0
scale_amount_random = 0.45
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 11 )
hue_variation = 0.05
hue_variation_random = 0.67

[node name="explosive_star_particles" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource( 9 )
emitting = false
amount = 200
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 0.23
texture = ExtResource( 10 )
emission_shape = 1
emission_sphere_radius = 2.0
spread = 180.0
gravity = Vector2( 0, 150 )
initial_velocity = 296.78
angular_velocity = 557.43
angular_velocity_random = 0.27
linear_accel = 100.0
linear_accel_random = 1.0
angle = -77.4
scale_amount = 2.0
scale_amount_random = 0.45
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 12 )
hue_variation = 0.05
hue_variation_random = 0.67
